# polarimetry-package

./: .gitignore  README.md  pyproject.toml
src/polarimetry_package/models/: header.py  noise_set.py  polarization_efficiency.py  stokes_set.py
src/polarimetry_package/pipeline/: __init__.py  result.py  standard.py
src/polarimetry_package/plotting/: __init__.py  base.py  plot_mixin.py  stokes_plotting.py  util.py
src/polarimetry_package/processing/: __init__.py  background.py  shift.py
src/polarimetry_package/processing/flux/: flux.py  flux_image.py
src/polarimetry_package/processing/image/: image_set.py
src/polarimetry_package/processing/instrument/: instrument.py
src/polarimetry_package/processing/models/: __init__.py  area.py  noise_mixin.py  noise_set.py  wave.py
src/polarimetry_package/processing/stokes/: demodulation_matrix.py  polarization_efficiency.py  stokes_set.py  transmittance.py
src/polarimetry_package/util/: __init__.py  decorator.py  reader.py
src/polarimetry_packaging/io/: __init__.py  reader.py
src/polarimetry_packaging/models/: __init__.py  area.py  flux_image.py  image_set.py  instrument.py  mueller_matrix.py  result.py  transmittance.py
src/polarimetry_packaging/pipeline/: __init__.py
src/polarimetry_packaging/plotting/: __init__.py
src/polarimetry_packaging/processing/: binning.py
tests/: test.py
tests/FOC_POL_C1F/: x274020at_c1f.fits  x274020bt_c1f.fits  x274020ct_c1f.fits  x274020dt_c1f.fits  x274020et_c1f.fits  x274020ft_c1f.fits  x274020gt_c1f.fits  x274020ht_c1f.fits  x274020it_c1f.fits
(+4 files in other folders)
