[project]
name = "polarimetry-packaging"
version = "0.1.0"
description = ""
authors = [
    {name = "HisadaRintaro",email = "rintro204@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython (>=9.8.0,<10.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "astropy (>=7.2.0,<8.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "stsynphot (>=1.5.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "polarimetry_packaging", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython (>=9.9.0,<10.0.0)"
]
